// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.analysis.analyzedtestvariant;

import "go.chromium.org/luci/analysis/proto/v1/predicate.proto";

option go_package = "go.chromium.org/luci/analysis/proto/analyzedtestvariant;atvpb";

// Deprecated. Retained only for config compatibility.
// Can be deleted once chromium-m120 / chrome-m120 and all prior
// versions have had their LUCI configs deleted.
message Predicate {
  string test_id_regexp = 1;
  luci.analysis.v1.VariantPredicate variant = 2;
  Status status = 3;
}

// Deprecated. Retained only for config compatibility.
// Can be deleted once chromium-m120 / chrome-m120 and all prior
// versions have had their LUCI configs deleted.
enum Status {
  STATUS_UNSPECIFIED = 0;
  HAS_UNEXPECTED_RESULTS = 5;
  FLAKY = 10;
  CONSISTENTLY_UNEXPECTED = 20;
  CONSISTENTLY_EXPECTED = 30;
  NO_NEW_RESULTS = 40;
}